<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.popularMovies.details.MovieDetailFragment">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_image_cd" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/release_date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="@+id/image" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/release_date_label" />

        <ImageView
            android:id="@+id/star_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintTop_toTopOf="@id/rating_label"
            app:layout_constraintStart_toStartOf="@id/release_date_label"
            android:contentDescription="@string/rating_icon_cd" />

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/star_icon"
            app:layout_constraintTop_toBottomOf="@id/release_date" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/release_date_label"
            app:layout_constraintTop_toBottomOf="@id/rating_label" />


        <ImageView
            android:id="@+id/popularity_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintTop_toTopOf="@id/popularity_label"
            app:layout_constraintStart_toStartOf="@id/release_date_label"
            android:contentDescription="@string/popularity_icon_cd" />


        <TextView
            android:id="@+id/popularity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@id/popularity_icon"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/release_date_label"
            app:layout_constraintTop_toBottomOf="@id/popularity_label" />

        <TextView
            android:id="@+id/overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_label"
            android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="@id/image" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/approach"
            app:layout_constraintTop_toBottomOf="@id/overview_label"
            app:layout_constraintStart_toStartOf="@id/overview_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>